Fix lỗi resource Add db

--- a/Vimas/Vimas.csproj
+++ b/Vimas/Vimas.csproj
@@ -215,6 +215,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApiEndpoint.cs" />
+    <Compile Include="App_GlobalResources\Messages.Designer.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\IdentityConfig.cs" />
