--- a/Vimas/Vimas.csproj
+++ b/Vimas/Vimas.csproj
@@ -228,6 +228,7 @@
     <Compile Include="Areas\HeThong\Controllers\CongTyTiepNhanController.cs" />
     <Compile Include="Areas\HeThong\Controllers\HopDongDOLABController.cs" />
     <Compile Include="Areas\HeThong\Controllers\NghiepDoanController.cs" />
+    <Compile Include="Areas\HocVien\Controllers\BangCapController.cs" />
     <Compile Include="Areas\HocVien\Controllers\BienBanController.cs" />
     <Compile Include="Areas\HocVien\Controllers\KyTucXaController.cs" />
     <Compile Include="Areas\HocVien\Controllers\QuaTrinhHocTapController.cs" />
@@ -602,6 +603,7 @@
       <DependentUpon>ViewModel.tt</DependentUpon>
     </Compile>
     <Compile Include="ViewModels\AspNetUserViewModel.cs" />
+    <Compile Include="ViewModels\BangCapEditViewModel.cs" />
     <Compile Include="ViewModels\BangCapViewModelGen.cs">
       <DependentUpon>ViewModel.tt</DependentUpon>
     </Compile>
@@ -3006,6 +3008,8 @@
     <Content Include="Areas\HocVien\Views\BienBan\Index.cshtml" />
     <Content Include="Areas\HocVien\Views\ThongTinDuTuyen\Index.cshtml" />
     <Content Include="Areas\Admin\Views\SystemLog\Index.cshtml" />
+    <Content Include="Areas\HocVien\Views\BangCap\Create.cshtml" />
+    <Content Include="Areas\HocVien\Views\BangCap\Edit.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\cldr.js" />
     <Content Include="Scripts\cldr\event.js" />
