swal("Chỉnh sửa", result.message, "success"); window.location.href = "@this.Url.Action("Index")";
==>

swal({title:"Chỉnh sửa",
                   text: result.message,
                   type: "success"
               }, function () {
                   window.location.href = "@this.Url.Action("Index")";
               });

--- a/Vimas/Web.config
+++ b/Vimas/Web.config
@@ -9,8 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Server=LocalSQL;Database=Vimas;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="VimasEntities" connectionString="metadata=res://*/Models.Entities.VimasEntities.csdl|res://*/Models.Entities.VimasEntities.ssdl|res://*/Models.Entities.VimasEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LocalSQL;initial catalog=Vimas;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DefaultConnection" connectionString="Server=HAILTSE61292\SQLEXPRESS;Database=Vimas;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="VimasEntities" connectionString="metadata=res://*/Models.Entities.VimasEntities.csdl|res://*/Models.Entities.VimasEntities.ssdl|res://*/Models.Entities.VimasEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=HAILTSE61292\SQLEXPRESS;initial catalog=Vimas;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
